fixing mobile layout issue

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 
 html, body {
 	overflow-x: hidden;
-	/* max-width: 100%; */
+	max-width: 100%;
 }
 
 body {
